fix spelling error and delete word-spacing

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ input[type="text"] {
   text-decoration: underline;
 }
 #list_1 {
-  word-spacing: 12px;
   line-height: 2.5;
 }
 #part_1 .row {
